--- a/package.json
+++ b/package.json
@@ -6,19 +6,39 @@
   "scripts": {
     "start": "nodemon src/index.js -e js,hbs --watch public/index.htm --ext hbs",
     "dev": "nodemon src/index.js",
+    "build": "webpack",
+    "deploy": "wrangler publish",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "assert": "^2.1.0",
     "bad-words": "^3.0.4",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "express": "^4.18.2",
     "hbs": "^4.2.0",
+    "https-browserify": "^1.0.0",
     "moment": "^2.29.4",
     "mustache": "^4.2.0",
     "nodemon": "^2.0.22",
+    "path-browserify": "^1.0.1",
     "qs": "^6.11.1",
-    "socket.io": "^4.6.1"
+    "querystring-es3": "^0.2.1",
+    "socket.io": "^4.6.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "timers-browserify": "^2.0.12",
+    "url": "^0.11.4",
+    "util": "^0.12.5",
+    "vm-browserify": "^1.1.2"
+  },
+  "devDependencies": {
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1",
+    "wrangler": "^3.111.0"
   }
 }
