--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon src/index.js -e js,hbs --watch public/index.htm --ext hbs",
     "dev": "nodemon src/index.js",
-    "build": "rm -rf dist && mkdir dist && cp -r src public package.json dist/",
+    "build": "rm -rf dist && mkdir dist && cp -r public/* dist/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
