--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "bad-words": "^3.0.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "hbs": "^4.2.0",
     "moment": "^2.29.4",
