updated env variables and handling links to dynamic prod and dev links

--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,8 @@
-BACKEND_URL=
-FRONTEND_URL=
+# dev env
+LOCAL_BACKEND_URL=
+LOCAL_FRONTEND_URL=
+PORT=3000
+
+# prod enc
+PROD_BACKEND_URL=
+PROD_FRONTEND_URL=
