--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js -e js,hbs --watch public/index.htm --ext hbs",
+    "start": "NODE_ENV=development nodemon src/index.js -e js,hbs --watch public/index.htm --ext hbs",
+    "prod": "NODE_ENV=production node src/index.js",
     "dev": "nodemon src/index.js",
     "build": "rm -rf dist && mkdir dist && cp -r public/* dist/",
     "test": "echo \"Error: no test specified\" && exit 1"
