--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "NODE_ENV=development nodemon src/index.js -e js,hbs --watch public/index.htm --ext hbs",
     "prod": "NODE_ENV=production node src/index.js",
     "dev": "nodemon src/index.js",
-    "build": "rm -rf dist && mkdir dist && cp -r public/* dist/",
+    "build": "rm -rf dist && mkdir dist && cp -r public/* dist/ && echo 'Build complete'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
