--- a/netlify.toml
+++ b/netlify.toml
@@ -2,5 +2,4 @@
   command = "npm install && echo 'window.BACKEND_URL = \"${PROD_BACKEND_URL}\"; window.FRONTEND_URL = \"${PROD_FRONTEND_URL}\"; window.ENV = \"production\";' > public/env-config.js && npm run build"
 
 [build.environment]
-  APP_ENVIRONMENT = "production"
-  NODE_ENV="development"
+  NODE_ENV="production"
