netlify functions added to toml

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
 [build]
   command = "npm install && npm run build"
+  functions = "netlify/functions"
   # \"npm install && echo 'window.BACKEND_URL = \"${PROD_BACKEND_URL}\"; window.FRONTEND_URL = \"${PROD_FRONTEND_URL}\"; window.ENV = \"production\";' > public/env-config.js && npm run build"
 
 [build.environment]
